feat(frontend): Step 31 — testing, a11y & i18n (MSW floor, axe, react-i18next, Intl, hermetic Playwright E2E) (step-31-end)
Code: MSW handlers/server + error-mode floor under 24 Vitest tests; axe a11y
gate; i18n en/es + LanguageSwitcher + locale reset; Intl multi-currency;
Playwright config (webServer, same-origin trick) + transfer-flow E2E 2/2 in
real Chromium; e2e/ fenced off Vitest; smoke.sh + requests.http (29/30/31);
ADR-0022. §12.3 mutation: Idempotency-Key dropped → E2E FAILED → reverted.

Course ops (same session): backlog closed — enrichment loops (steps 9,12-30 +
origin line 1,2,10) merged, aids pass verified steps 3-8+11 at tags, ADHD/
session layer re-applied to all 30 enriched lessons, all 31 lessons pass
structure+interactivity minimums; ledger row, capsule, flashcards, metrics,
trackers updated.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>